project/logs/20251003_103434.log
Use Adapater:NVIDIA GeForce RTX 3070 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Object3d.PS.hlsl,profike:ps_6_0

Object3d.PS.hlsl:43:43: error: no member named 'normal' in 'VertexShaderOutput'
        float NdotL = dot(normalize(input.normal), -gDirectionalLight.direction);
                                    ~~~~~ ^

